fixing assembly + permGen space problems